# Pluck-It

./: .gitignore  CONTRIBUTING.md  PluckIt.sln  PluckIt.slnx  QUICKSTART.md  README.md  configure-azure-deployment.ps1  configure-azure.ps1  coverlet.runsettings  deploy-api.ps1  pytest.ini
.devcontainer/: devcontainer.json
.github/: DEPLOYMENT_SETUP.md  pull_request_template.md
PluckIt.Api/: PluckIt.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
PluckIt.Client/: .eslintrc.json  .gitignore  README.md  angular.json  mobile-risks.md  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  sonar-project.properties
PluckIt.Core/: ClothingItem.cs  Collection.cs  IBlobSasService.cs  IClothingMetadataService.cs  ICollectionRepository.cs  IEmbeddingService.cs  IStylingActivityRepository.cs  IStylistService.cs  IUserProfileRepository.cs  IWardrobeRepository.cs  IWearHistoryRepository.cs  OutfitRecommendation.cs  PluckIt.Core.csproj  StylingActivityRecord.cs  UserProfile.cs  VaultInsights.cs  WardrobeImageCleanupIndex.cs  WardrobeQuery.cs  WearEvent.cs  WearHistoryRecord.cs
PluckIt.Functions/: AssemblyInfo.cs  PluckIt.Functions.csproj  Program.cs  TrimmerRoots.xml  host.json  local.settings.json.example
PluckIt.Infrastructure/: BlobSasService.cs  ClothingMetadataService.cs  CohereEmbeddingService.cs  CollectionRepository.cs  PluckIt.Infrastructure.csproj  PythonClothingMetadataService.cs  StylingActivityRepository.cs  StylistService.cs  UserProfileRepository.cs  WardrobeRepository.cs  WearHistoryRepository.cs
PluckIt.Processor/: .env.test  .funcignore  function_app.py  host.json  local.settings.json  local.settings.json.example  pyproject.toml  requirements-prod.txt  requirements-test.txt  requirements.txt
PluckIt.Processor/agents/: __init__.py  auth.py  db.py  digest_agent.py  image_taste_analyzer.py  memory.py  models.py  mood_processor.py  scraper_runner.py  sitemap_seeder.py  stylist_agent.py  taste_calibration.py  url_security.py  vault_insights.py
PluckIt.Processor/agents/scrapers/: __init__.py  base.py  config_generator.py  deduplicator.py  image_utils.py  reddit_scraper.py
PluckIt.Processor/agents/tools/: __init__.py  gaps.py  mood.py  profile.py  scraped_items.py  wardrobe.py  wear_patterns.py  weather.py
PluckIt.Processor/tests/: conftest.py
PluckIt.Processor/tests/unit/: test_auth.py  test_auth_contract.py  test_config_generator.py  test_deduplicator.py  test_digest_agent.py  test_health.py  test_image_utils.py  test_memory.py  test_mood_processor.py  test_reddit_scraper.py  test_routes.py  test_scheduler.py  test_scraped_items.py  test_scraper_runner.py  test_scraper_runner_helpers.py  test_sitemap_seeder.py  test_stylist_agent.py  test_taste_calibration.py  test_tools_gaps.py  test_tools_wardrobe.py  test_tools_wear_patterns.py  test_vault_insights.py
PluckIt.Segmentation.Modal/: .env.example  .gitignore  README.md  auth.py  inference.py  local_test.py  modal_app.py  postprocess.py  preprocess.py  requirements.txt
frontend/: angular.json  (+3 more)
(+221 files in other folders)
