[project]
name = "pluckit-processor"
version = "0.1.0"
description = "Pluck-It wardrobe image processor Azure Function (Python V2)."
requires-python = ">=3.12"
dependencies = [
  "azure-functions",
  "azure-storage-blob>=12.20.0",
  "azure-cosmos>=4.7.0",
  "pillow>=10.0.0",
  "rembg>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

