[project]
name = "pluckit-processor"
version = "0.1.0"
description = "Pluck-It wardrobe image processor Azure Function (Python V2)."
requires-python = ">=3.12"
dependencies = [
  "azure-functions",
  "azure-storage-blob>=12.20.0",
  "azure-cosmos>=4.7.0",
  "pillow>=10.0.0",
  "rembg>=2.0.0",
  "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.15.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",          # AsyncClient for FastAPI TestClient
  "anyio[trio]>=4.0.0",     # async test backend for pytest-asyncio
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode       = "auto"
testpaths          = ["tests"]
python_files       = ["test_*.py"]
python_classes     = ["Test*"]
python_functions   = ["test_*"]
markers = [
  "unit: fast unit tests (no external I/O)",
  "integration: tests requiring Docker / real Cosmos emulator",
]
# Ensures test environment variables are set before any import — handled in conftest.py

