[project]
name = "pluckit-processor"
version = "0.1.0"
description = "Pluck-It wardrobe image processor Azure Function (Python V2)."
requires-python = ">=3.12"
dependencies = [
  "azure-functions",
  "azure-storage-blob>=12.20.0",
  "azure-storage-queue>=12.0.0",
  "azure-cosmos>=4.7.0",
  "pillow>=10.3.0",
  "pillow-heif>=0.16.0",
  "urllib3>=2.2.2",
  "fastapi",
  "python-multipart",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "langgraph",
  "langchain-openai",
  "langchain-core",
  "langfuse",
  "aiohttp",
  "httpx",
  "google-auth",
  "feedparser>=6.0.0",
  "imagehash>=4.3.1",
  "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.15.0",
  "pytest-cov>=5.0.0",
  "anyio[trio]>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode       = "auto"
testpaths          = ["tests"]
python_files       = ["test_*.py"]
python_classes     = ["Test*"]
python_functions   = ["test_*"]
markers = [
  "unit: fast unit tests (no external I/O)",
  "integration: tests requiring Docker / real Cosmos emulator",
]
# Ensures test environment variables are set before any import — handled in conftest.py

